# restaurantapi_pyclient

./: README.md  index.rst
restaurantapi_pyclient/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Usage summary for my package  Usage summary for my package.html  conf.py  index.rst  pyproject.toml
restaurantapi_pyclient/docs/: Makefile  conf.py  example.ipynb  make.bat
restaurantapi_pyclient/src/restaurantapi_pyclient/: __init__.py  restaurantapi_pyclient.py
restaurantapi_pyclient/tests/: test_get_cuisine_for_restaurant.py  test_get_random_restaurant.py  test_get_specific_restaurant_details.py  test_query_restaurants_in_location.py  test_restaurantapi_pyclient.py  test_search_restaurants_by_cuisine.py  test_sort_restaurants_by_ratings.py
restaurantapi_pyclient/usage summary/: restaurantapi_pyclient.md
